--- a/cybernetics_website_final/css/style.css
+++ b/cybernetics_website_final/css/style.css
@@ -57,7 +57,7 @@ nav a:hover {
 
 /* Header */
 
-header {
+/* header {
   display: flex;
   background-color: white;
   align-items: center;
@@ -65,7 +65,7 @@ header {
   width: 100%;
   height: 100%;
   position: relative;
-}
+} */
 
 
 /* Imag Overlay Intro */
@@ -75,22 +75,24 @@ header {
   background-color: white;
   align-items: center;
   justify-content: center;
-  width: 200%;
-  height: 200%;
+  /* width: 200%; */
+  min-height: 105%;
+  max-height: 105%;
+  height: auto;
   position: relative;
-
+  margin-bottom: 40px;
 }
 
-#starting-banner > h1 {
+#starting-banner h1 {
   font-size: 4em;
   text-transform: uppercase;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.08em;
+
   /* background: url('../assets/images/neurons.jpg') 50% 50% no-repeat;
   background-size: cover;
   -webkit-text-fill-color: transparent;
   -webkite-background-clip: text; */
 }
-
 
 /* Header & Section One */
 
@@ -100,30 +102,46 @@ h1 {
 
 #introduction {
   background-color: #022859;
+  min-height: 500px;
+  max-height: 500px;
+  height: auto;
   width: 500px;
-  height: 500px;
   position: relative;
   justify-content: center;
   align-items: center;
 }
 
 #introduction p {
-  display: none;
+  /* display: none; */
   color: white;
-  text-align: center;
+  text-align: left;
+  padding: 0em 2em;
+  color: yellow;
+  margin-bottom: 3em;
 
 }
 
 #introduction h1 {
   color: white;
   text-align: center;
+  text-transform: uppercase;
 }
+
+/* To affect the intro buttons container */
+#intro-buttons-container {
+  margin-top: 60px;
+  /* align-items: center; */
+}
+
+/* To affect the intro buttons directly */
 
 #introduction button {
   justify-content: space-between;
   /* text-align: center; */
   width: 400px;
 }
+
+/* Ellipse to manage Norbert Wiener images */
 
 .ellipse {
   background-color: #0476D9;
@@ -136,7 +154,7 @@ h1 {
 }
 
 .ellipse img:hover #introduction p {
-  display: block;
+  /* display: block; */
 
 }
 
@@ -150,6 +168,7 @@ h1 {
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
+  margin-left: 60px;
   cursor: pointer;
 }
 
@@ -176,8 +195,10 @@ h1 {
 
 #choice {
   background-color: #033E8C;
+  min-height: 500px;
+  max-height: 500px;
+  height: auto;
   width: 500px;
-  height: 500px;
   position: relative;
   justify-content: center;
   align-items: center;
@@ -186,6 +207,7 @@ h1 {
 #choice h2 {
   color: white;
   text-align: center;
+  text-transform: uppercase;
 }
 
 #choice img{
@@ -194,7 +216,14 @@ h1 {
 
 #choice p {
   color: white;
-  text-align: center;
+  text-align: left;
+  padding: 0em 2em;
+  /* font-style: italic; */
+  /* color: #fdf91e; */
+}
+
+#choice-buttons-container {
+  align-items: center;
 }
 
 #choice button {
@@ -206,8 +235,11 @@ h1 {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  /* margin: 4px 2px;
+  margin-left: 100px; */
   cursor: pointer;
+  margin-top: 40px;
+  margin-left: 110px;
 }
 
 
@@ -231,7 +263,7 @@ h1 {
 #connect {
   background-color: #022859;
   width: 500px;
-  height: 500px;
+  height: auto;
   position: relative;
   justify-content: center;
   align-items: center;
@@ -240,6 +272,7 @@ h1 {
 #connect h2 {
   color: white;
   text-align: center;
+  text-transform: uppercase;
 }
 
 #connect img{
@@ -248,11 +281,9 @@ h1 {
 
 #connect p {
   color: white;
-  text-align: center;
+  text-align: left;
+  padding: 0em 2em;
 }
-
-
-
 
 /* P5 Canvas */
 
@@ -260,9 +291,13 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-style: solid;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
+  margin-top: 1em;
+  /* z-index: -10; */
+  /* border-style: solid; */
+  /* width: 100%;
+  height: 100%; */
 }
 
 
@@ -271,6 +306,11 @@ h1 {
 .slide-up {
 	opacity: 0;
 	transform: translateY(2em);
-	transition: all .3s .5s ease-out;
+	transition: all .5s .5s ease-out;
 /*	will-change: all;*/
+}
+
+.slide-up.is-visible {
+	opacity: 1;
+	transform: translateY(0);
 }
