--- a/cybernetics_website_final/css/style.css
+++ b/cybernetics_website_final/css/style.css
@@ -451,22 +451,36 @@ h2 {
 
 } */
 
-.test-model-text {
+.test-model-text-1 {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-evenly;
   padding: 0.5em;
 }
 
-.test-model-text img {
-  width: 20%;
-  height: 10%;
+.test-model-text-1 img {
+  width: 10%;
+  height: 5%;
 }
 
-/* .test-model-text p {
+.test-model-text-2 {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding: 0.5em;
+}
 
-} */
+.test-model-text-2 img {
+  width: 10%;
+  height: 5%;
+}
 
 #brain-circuits-test {
   max-width: 25%;
