--- a/cybernetics_website_final/css/style.css
+++ b/cybernetics_website_final/css/style.css
@@ -28,6 +28,49 @@ body {
   background-position: center;
 }
 
+section p {
+  line-height: 1.6;
+  letter-spacing: 1.4px;
+  margin-left: -1em;
+  margin-right: 1.8em;
+  /* display: block; */
+}
+
+section .section-question {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-left: 4em;
+  margin-right: 1em; */
+}
+
+section .section-question p {
+  line-height: 1.6;
+  letter-spacing: 2px;
+  margin-left: 0;
+  margin-right: 0;
+  /* display: block; */
+}
+
+/* Back to top button */
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+
 
 /* Nav */
 
@@ -78,6 +121,7 @@ nav a:hover {
   /* width: 200%; */
   min-height: 105%;
   max-height: 105%;
+  max-width:500px;
   height: auto;
   position: relative;
   margin-bottom: 40px;
@@ -97,30 +141,15 @@ nav a:hover {
 /* Header & Section One */
 
 h1 {
-  /* font-family: 'PT Serif', serif; */
+
   font-family: Roboto;
-  /* font-family: 'Secular One', sans-serif; */
-  /* font-family: 'Abril Fatface', cursive; */
-  /* font-family: 'Anton', sans-serif; */ */
-  /* font-family: 'EB Garamond', serif; */
-  /* font-family: 'Arvo', serif; */
-  /* font-family: 'Inconsolata', monospace; */
-  /* font-family: 'Patua One', cursive; */
-  /* font-family: 'Chango', cursive; */
-  /* font-family: 'Monofett', cursive; */
+
 }
 
 h2 {
-  /* font-family: 'PT Serif', serif; */
-  /* font-family: 'Abril Fatface', cursive; */
-  /* font-family: 'Anton', sans-serif; */
-  /* font-family: 'EB Garamond', serif; */
+
   font-family: 'Secular One', sans-serif;
-  /* font-family: 'Arvo', serif; */
-  /* font-family: 'Inconsolata', monospace; */
-  /* font-family: 'Patua One', cursive; */
-  /* font-family: 'Chango', cursive; */
-  /* font-family: 'Monofett', cursive; */
+
 
   font-size: 2.6em;
 }
@@ -136,6 +165,7 @@ h2 {
   align-items: center;
   /* margin-bottom: 2em; */
   padding-bottom: 3em;
+  line-height: 1.6;
 }
 
 #introduction p {
@@ -171,8 +201,50 @@ h2 {
   display: flex;
 }
 
+#book-section {
+  display: flex;
+  align-items: left;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  flex-direction: row;
+  margin-left: 6em;
+  margin-right: 10em;
+  }
+
+
+#book-section p {
+  align-items: left;
+  justify-content: center;
+  margin-right: 7em;
+}
+
+/* #book-section i {
+  background-color: yellow;
+  color: black;
+} */
+
+#book-section-image-container {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  flex-direction: row;
+  margin-left: 6.5em;
+}
+
+#book-section-image-container img {
+  width: 40%;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
 .section-question {
   display: flex;
+  test-align: center;
   justify-content: center;
   /* text-align: left; */
 }
@@ -180,10 +252,19 @@ h2 {
 #introduction .section-question p, #choice .section-question p,
 #connect .section-question p, #test .section-question p, #self-regulation .section-question p {
   color: yellow;
-
-
   /* display: block; */
+  font-family: 'Gloria Hallelujah', cursive;
+  font-size: 1.4em;
 }
+
+/* #introduction > p, #choice > p,
+#connect > p, #test > p, #self-regulation > p {
+  margin-left: -3em;
+  color: yellow;
+  margin-right: 10em;
+} */
+
+
 
 /* Ellipse to manage Norbert Wiener images */
 
@@ -422,8 +503,6 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-
-
 }
 
 #test button {
@@ -458,16 +537,24 @@ h2 {
   flex-wrap: wrap;
   width: 100%;
   flex-direction: row;
-  justify-content: space-evenly;
+ /* justify-content:space-around;*/
   padding: 0.5em;
 }
 
-.test-model-text-1 img {
-  width: 10%;
-  height: 5%;
+.test-model-text-1 div {
+  /* background:red; */
+  margin-left:1%;
+  width:35%;
 }
 
-.test-model-text-2 {
+.test-model-text-1 div img{
+  width:auto;
+  height:4vh;
+}
+
+
+
+/* .test-model-text-2 {
   display: flex;
   width: 100%;
   align-items: center;
@@ -480,7 +567,7 @@ h2 {
 .test-model-text-2 img {
   width: 10%;
   height: 5%;
-}
+} */
 
 #brain-circuits-test {
   max-width: 25%;
@@ -730,6 +817,7 @@ transform: rotateY(360deg);
   position: relative;
   justify-content: center;
   align-items: center;
+  margin-bottom: 7em;
   /* display: none; */
 }
 
@@ -778,30 +866,3 @@ h2 {
   from {background-color:#033E8C;}
   to {background-color: #0476D9;}
 }
-
-  /* Animation for figurine */
-
-  /* #figurine-container {
-
-
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom:0;
-  top:0;
-  margin: auto;
-  animation: ver-rotate 5s infinite linear;
-  }
-  @keyframes ver-rotate
-  {
-  from
-  {
-  transform: rotateY(0deg);
-  }
-  to
-  {
-  transform: rotateY(360deg);
-  }
-  } */
