--- a/cybernetics_website_final/css/style.css
+++ b/cybernetics_website_final/css/style.css
@@ -37,7 +37,7 @@ section p {
 }
 
 section .section-question {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
   /* margin-left: 4em;
@@ -155,6 +155,10 @@ h2 {
 }
 
 .wiener-try-again {
+  display: flex;
+}
+
+#dialog {
   display: none;
 }
 
@@ -246,12 +250,12 @@ h2 {
   justify-content: center;
 }
 
-.section-question {
-  display: flex;
-  test-align: center;
-  justify-content: center;
+/* .section-question { */
+  /* display: flex; */
+  /* test-align: center;
+  justify-content: center; */
   /* text-align: left; */
-}
+/* } */
 
 #introduction .section-question p, #choice .section-question p,
 #connect .section-question p, #test .section-question p, #self-regulation .section-question p {
@@ -441,7 +445,7 @@ h2 {
   position: relative;
   justify-content: center;
   align-items: center;
-  /* display: none; */
+  display: none;
 }
 
 #connect h2 {
