--- a/cybernetics_website_final/css/style.css
+++ b/cybernetics_website_final/css/style.css
@@ -28,6 +28,11 @@ body {
   background-position: center;
 }
 
+
+/* section {
+} */
+
+
 section p {
   line-height: 1.6;
   letter-spacing: 1.2px;
@@ -148,14 +153,17 @@ h1 {
 
 
 h2 {
-
+  /* width: 100px;
+  height: 100px; */
   font-family: 'Secular One', sans-serif;
-
-
   font-size: 2.6em;
+  background-color: #0476D9;
+  /* Header animations */
+  animation-name: example;
+  animation-duration: 5s;
+  animation-direction: alternate-reverse;
+  animation-iteration-count: infinite;
 }
-
-
 
 /* Styling incorrect answers */
 
@@ -202,7 +210,10 @@ h2 {
   color: white;
   text-align: center;
   text-transform: uppercase;
+}
 
+#intro-sub-header {
+    margin-right: 3%;
 }
 
 /* To affect the intro buttons container */
@@ -224,27 +235,23 @@ h2 {
 }
 
 #book-section {
-  display: flex;
+  /* display: flex;
   align-items: left;
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  flex-direction: row;
-  margin-left: 6em;
-  margin-right: 10em;
+  flex-direction: row; */
+  margin-left: 33%;
+  margin-right: 10%;
   }
 
 
 #book-section p {
-  align-items: left;
+  /* align-items: left;
   justify-content: center;
-  margin-right: 7em;
+  margin-right: 7em; */
 }
 
-/* #book-section i {
-  background-color: yellow;
-  color: black;
-} */
 
 #book-section-image-container {
   display: flex;
@@ -254,7 +261,7 @@ h2 {
   flex-wrap: wrap;
   width: 100%;
   flex-direction: row;
-  margin-left: 6.5em;
+  margin-left: 20%;
 
 }
 
@@ -281,6 +288,11 @@ h2 {
   /* text-align: left; */
 /* } */
 
+#intro-section-question {
+  margin-left: 29%;
+  margin-right: 7%;
+}
+
 #introduction .section-question p, #choice .section-question p,
 #connect .section-question p, #test .section-question p, #self-regulation .section-question p {
   color: yellow;
@@ -288,14 +300,6 @@ h2 {
   font-family: 'Gloria Hallelujah', cursive;
   font-size: 1.4em;
 }
-
-/* #introduction > p, #choice > p,
-#connect > p, #test > p, #self-regulation > p {
-  margin-left: -3em;
-  color: yellow;
-  margin-right: 10em;
-} */
-
 
 
 /* Ellipse to manage Norbert Wiener images */
@@ -405,7 +409,8 @@ h2 {
 }
 
 #choice h2 {
-  color: white;
+  /* color: white; */
+  color:#fdf91e;
   text-align: center;
   text-transform: uppercase;
 
@@ -421,6 +426,11 @@ h2 {
   padding: 0em 0em;
   /* font-style: italic; */
   /* color: #fdf91e; */
+}
+
+#choice-section-question {
+  margin-left: 28%;
+  /* margin-right:-100%; */
 }
 
 #choice-buttons-container {
@@ -442,6 +452,7 @@ h2 {
   font-size: 16px;
   cursor: pointer;
   margin-top: 40px;
+  margin-bottom: 5%;
 }
 
 
@@ -473,7 +484,8 @@ h2 {
 }
 
 #connect h2 {
-  color: white;
+  /* color: white; */
+  color:#fdf91e;
   text-align: center;
   text-transform: uppercase;
 }
@@ -488,9 +500,17 @@ h2 {
   padding: 0em 0em;
 }
 
-#found-message {
-  padding: 0em 2em;
+#connect-section-question {
+  margin-left: 23%;
+  margin-right: 2%;
 }
+
+#found-message {
+  margin-left: 22%;
+  margin-right: 12%;
+  margin-bottom: 5%;
+}
+
 
 /* Test Section */
 
@@ -507,6 +527,7 @@ h2 {
 
 #test h2 {
   color: white;
+  /* color:#fdf91e; */
   text-align: center;
   text-transform: uppercase;
 }
@@ -518,6 +539,11 @@ h2 {
   padding: 0em 0em;
   /* font-style: italic; */
   /* color: #fdf91e; */
+}
+
+#test-section-question {
+  /* margin-left: */
+  margin-right: 10%;
 }
 
 
@@ -664,9 +690,10 @@ h2 {
 }
 
 #self-regulation h2 {
-  color: white;
+  /* color: white; */
   text-align: center;
   text-transform: uppercase;
+  color:#fdf91e;
 }
 
 
@@ -676,6 +703,17 @@ h2 {
   padding: 0em 2em;
   /* font-style: italic; */
   /* color: #fdf91e; */
+}
+
+#regulation-section-question {
+  margin-left: 20%;
+  margin-right: 8%;
+  margin-bottom: 3em;
+}
+
+#regulation-revealed-text {
+  margin-left: 20%;
+  /* margin-right: 8%; */
 }
 
 #figurine-container {
@@ -762,12 +800,14 @@ transform: rotateY(360deg);
   background-image: url("../assets/images/neurons.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  padding-bottom: 5em;
   margin-bottom: 5em;
   /* display: none; */
 }
 
 #conclusion h2 {
-  color: white;
+  /* color: white; */
+  color:#fdf91e;
   text-align: center;
   text-transform: uppercase;
 }
@@ -778,20 +818,85 @@ transform: rotateY(360deg);
   text-align: left;
   padding: 0em 2em;
   /* font-style: italic; */
-  /* color: #fdf91e; */
+  /*  */
 }
+
+#conclusion a {
+  text-decoration: none;
+  color: #fdf91e;
+  display: inline-block;
+}
+
+#conclusion a:hover {
+  transform: scale(1.2);
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+}
+
+
+#extras-starting-banner {
+  display: flex;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  /* width: 200%; */
+  min-height: 150px;
+  max-height: 105%;
+  max-width:500px;
+  height: auto;
+  position: relative;
+  margin-bottom:0;
+}
+
+
+#extras-starting-banner h1{
+  font-size: 4em;
+  text-transform: uppercase;
+  letter-spacing: 0.08em;
+}
+
+/* #extras-start-banner h2 {
+  margin-left: 200px;
+} */
+
+#extras-sub-header-container {
+  /* padding-left: 15%; */
+    padding-left: 22%;
+  font-size: 3em;
+  font-family: 'Secular One', sans-serif;
+  font-weight: 900;
+  position: relative;
+  z-index: 20;
+  background-color: #0476D9;
+
+}
+
+
+#extras-sub-header {
+  font-size: 32;
+  color:black;
+
+  margin-bottom:0;
+  margin-top:0;
+
+  /* position: absolute; */
+  /* margin-left: 200px; */
+}
+
+#extras-sub-header h2{
+  /* padding-left: 20%; */
+}
+
+
 
 
 /* Extra sections */
 
 #extra-1 {
   background-color:#022859;
-  display: flex;
   width: 500px;
   height: auto;
   position: relative;
-  justify-content: center;
-  align-items: center;
 }
 
 #extra-1 h2 {
@@ -801,11 +906,8 @@ transform: rotateY(360deg);
 }
 
 #extra-1 img {
-  width: 50%;
+  width: 22%;
 }
-
-
-
 
 #extra-1 p {
   color: white;
@@ -815,14 +917,17 @@ transform: rotateY(360deg);
   /* color: #fdf91e; */
 }
 
+#stafford-video {
+width: 100%;
+}
+
 #extra-2 {
   background-color: #033E8C;
-  display: flex;
+
   width: 500px;
   height: auto;
   position: relative;
-  justify-content: center;
-  align-items: center;
+
 }
 
 #extra-2 h2 {
@@ -841,13 +946,15 @@ transform: rotateY(360deg);
 }
 
 
-#extra-3-video {
-  /* position: fixed; */
+
+
+/* #extra-3-video {
+  position: fixed;
   right: 0;
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
-}
+} */
 
 /* .video-container {
   height: 300px;
@@ -888,6 +995,10 @@ transform: rotateY(360deg);
   padding: 0em 2em;
   /* font-style: italic; */
   /* color: #fdf91e; */
+}
+
+#extra-3 img {
+  width: 75%;
 }
 
 /* Footer */
@@ -943,17 +1054,7 @@ transform: rotateY(360deg);
 	transform: translateX(0);
 }
 
-/* Header animations */
 
-h2 {
-  /* width: 100px;
-  height: 100px; */
-  background-color: #0476D9;
-  animation-name: example;
-  animation-duration: 5s;
-  animation-direction: alternate-reverse;
-  animation-iteration-count: infinite;
-}
 
 @keyframes example {
   from {background-color:#033E8C;}
