--- a/cybernetics_website_final/css/style.css
+++ b/cybernetics_website_final/css/style.css
@@ -17,6 +17,7 @@ body {
   padding: 0;
   margin: 0;
   display: grid; /* Set up the grid and justify/align to center */
+  /* grid-row-gap: 20%; */
   justify-content: center;
   align-content: center;
   font-family: 'Roboto', sans-serif;
@@ -28,6 +29,9 @@ body {
   background-position: center;
 }
 
+*:hover {
+   outline:3px lime solid;
+ }
 
 /* section {
 } */
@@ -310,7 +314,7 @@ h2 {
   color: yellow;
   /* display: block; */
   font-family: 'Gloria Hallelujah', cursive;
-  font-size: 1.4em;
+  font-size: 1.7em;
 }
 
 
@@ -365,7 +369,10 @@ h2 {
   animation: mymove 3s infinite forwards;
   /* animation-iteration-count: 1; */
   /* animation-direction: reverse; */
-  transform: translateX(-80%);
+  /* transform: translateX(-80%); */
+  left: 0px;
+  position:relative;
+
 
 }
 
@@ -384,7 +391,7 @@ h2 {
 @keyframes mymove {
   0% {opacity: 0;}
   10% {opacity: 1;}
-  100% {transform: rotate(-90deg); opacity: 0;}
+  100% {transform: rotate(-90deg); opacity: 0; left: 140px;}
     /* 100% {transform: rotate(90deg); opacity: 0;} */
 }
 
@@ -627,7 +634,7 @@ h2 {
 
 .test-model-text-1 div img{
   width:auto;
-  height:4vh;
+  height:25px;
   transition: transform .2s;
 }
 
@@ -850,12 +857,15 @@ transform: rotateY(360deg);
   align-items: center;
   justify-content: center;
   /* width: 200%; */
-  min-height: 150px;
-  max-height: 105%;
+  /* min-height: 10px; */
+  margin-top: 0%;
+  padding-top: 10%;
+  height: 40%;
+  /* max-height: 105%; */
   max-width:500px;
-  height: auto;
+  /* height: auto; */
   position: relative;
-  margin-bottom:0;
+  /* margin-bottom:0; */
 }
 
 
@@ -863,6 +873,7 @@ transform: rotateY(360deg);
   font-size: 4em;
   text-transform: uppercase;
   letter-spacing: 0.08em;
+  /* margin-bottom: 5px; */
 }
 
 /* #extras-start-banner h2 {
@@ -878,7 +889,8 @@ transform: rotateY(360deg);
   position: relative;
   z-index: 20;
   background-color: #0476D9;
-
+  margin-top: 0%;
+  /* margin-top: 100px; */
 }
 
 
@@ -896,8 +908,6 @@ transform: rotateY(360deg);
 #extras-sub-header h2{
   /* padding-left: 20%; */
 }
-
-
 
 
 /* Extra sections */
@@ -919,18 +929,38 @@ transform: rotateY(360deg);
   color: white;
   text-align: center;
   text-transform: uppercase;
+  margin-top: 0%;
 }
 
 #extra-1 {
+  /* margin-top: 100px; */
 }
 
-#extra-1 img {
-  width: 22%;
+/* #extra-1 img {
+  width: 100%;
+} */
+
+#history-mcculloch-pitts {
+  display: flex;
+  width: auto;
+  align-items: center;
+  justify-content: center;
+  margin-left: 18%;
 }
 
+#pitts img {
+  width: 62%;
+  /* height: 60%; */
+  /* object-fit: cover */
+}
 
 #stafford-video {
-width: 100%;
+  margin-top:-28px;
+  width: 100%;
+}
+
+#myVideo {
+  width:100%;
 }
 
 #extra-2 {
@@ -1012,6 +1042,8 @@ width: 100%;
   color: white;
   text-align: left;
   padding: 0em 2em;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .sources-styling h2 {
@@ -1021,15 +1053,10 @@ width: 100%;
 }
 
 #sources-1 {
-
 }
 
 #sources-2 {
-
 }
-
-
-
 
 /* Animations  */
 
@@ -1058,21 +1085,13 @@ width: 100%;
 	transform: translateX(0);
 }
 
-
-
 @keyframes example {
   from {background-color:#033E8C;}
   to {background-color: #0476D9;}
 }
 
-
-/* Media Queries */
-/*
-@media screen and (max-width:600px) {
-  /* .test-model-text-1 {
-    height: 2vh;
-    background-color: green;
-  } */ */
-  body{
-    background-color:red;
+@media only screen and (max-device-width: 600px){
+  .test-model-text-1 div img {
+    height: 10px;
   }
+}
